fix: Sidebar stickiness spacing and height

--- a/source/_assets/sass/_sidebar.scss
+++ b/source/_assets/sass/_sidebar.scss
@@ -38,6 +38,6 @@
         top: 2rem;
         right: 0;
         z-index: 2;
-        height: calc(100vh - 2rem);
+        height: calc(100vh - 5rem);
     }
 }
